# ddr_report_generator

./: .env.example  .gitignore  README.md  cleanup_images.py  diagnose.py  main.py  pyproject.toml
src/: __init__.py  config.py
src/graph/: __init__.py  nodes.py  pipeline.py  prompts.py  state.py
src/ingestion/: __init__.py  chunker.py  pdf_parser.py
src/report/: __init__.py  builder.py  styles.py
src/utils/: __init__.py  helpers.py  logger.py
src/vectorstore/: __init__.py  embedder.py  store.py
tests/: conftest.py  test_graph.py  test_ingestion.py  test_vectorstore.py
